--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
 
     <div id="phone">
-      <p class="phone">+9779847022736</p>
+      <p class="phone">+9779847019877</p>
       <i class="fa-solid fa-phone icon12"></i>
     </div>
 
@@ -178,7 +178,7 @@
               <div class="icon_div">
               <i class="fa-solid fa-location-dot fa-bounce icon1"></i>
             </div>
-              <p class="location">Sunwal-5,Bankatti,Nawalparasi Nepal</p>
+              <p class="location">Sunwal-7,Nawalparasi Nepal</p>
 
 
             </div>
@@ -199,7 +199,7 @@
               <div class="icon_div">
               <i class="fa-solid fa-phone fa-shake icon1"></i>
               </div>
-              <p class="location">+9779847022736</p>
+              <p class="location">+9779847019877</p>
             </div>
             <div class=" social_icon">
              <a href=""> <i class="socialmedia fa-brands fa-square-instagram" title="Instagram"></i></a>
